# src/controllers/studentController.ts
@@ -1,21 +1,27 @@
 import {Route, Get, Post, Delete, Patch, Example, Body} from 'tsoa';
 import { Student, StagedStudent } from '../models/student';
+import { StudentDataAccessor } from '../services/studentDataAccessor';
+import { inject } from 'inversify';
 
 @Route('student')
-export class UsersController {
-    /** Get user by ID */
+export class StudentController {
+
+    constructor(
+        @inject("StudentDataAccessor") private studentDataAccessor: StudentDataAccessor,
+    ) { }
+    
     @Get('{id}')
-    public async Get(id: string): Promise<Student> {
-        return null;
+    public async get(id: string): Promise<Student> {
+        return this.studentDataAccessor.get(id);
     }
 
     @Post()
-    public async Upsert(@Body() request: StagedStudent): Promise<Student> {
-        return null;
+    public async upsert(@Body() student: Student): Promise<Student> {
+        return this.studentDataAccessor.upsert(student);
     }
 
     @Delete('{id}')
-    public async Delete(id: string): Promise<void> {
-        return Promise.resolve();
+    public async delete(id: string): Promise<Student> {
+        return this.studentDataAccessor.delete(id);
     }
 }
